--- a/style.css
+++ b/style.css
@@ -61,6 +61,12 @@ ul>li {
     font-size: 30px;
 }
 
+ol{
+    margin-left: 5%;
+    font-size: 20px;
+    line-height: 1.5;
+}
+
 
 /* a -sylka */
 
@@ -138,5 +144,13 @@ a:hover {
 .video>iframe {
     width: 80%;
     margin: 0 auto;
-    height: 40em;
+    height: 32em;
+}
+
+/* DIV */
+
+.two{
+    display: flex;
+    justify-content: center;
+    gap: 5%;
 }
