--- a/styleText.css
+++ b/styleText.css
@@ -7,11 +7,11 @@ h2{
 }
 h3{
     font-size: 30px;
-    /* color: red; */
+    color: rgb(7, 145, 147);
 }
 h4{
     font-size: 26px;
-    /* color: red; */
+    color: rgb(143, 6, 130);
 }
 h5{
     font-size: 24px;
