--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a:hover {
     /* outline: 5px solid black; */
 }
 
-/* IMG/ VIDEO */
+/* IMG/ VIDEO prezent */
 .video {
     width: 80%;
     height: 40em;
@@ -122,8 +122,17 @@ a:hover {
     padding: 5px;
     margin: 2% auto;
 }
+.prezent{
+    width: 96%;
+    height: 60em;
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    margin: 2% auto;
+}
 
-.video iframe {
+.video iframe,
+.prezent iframe {
     width: 100%;
     height: 90%;
 }
