--- a/style.css
+++ b/style.css
@@ -47,19 +47,19 @@ header ul {
 /* UL */
 
 ul {
-    list-style-type: none;
+    /* list-style-type: none; */
     padding: 3%;
     line-height: 1.5;
     font-size: 20px;
 }
 
 ul>li {
-    margin-left: 5%;
+    margin-left: 10%;
 }
 
-.ul {
-    font-size: 30px;
-}
+/* .ul {
+    font-size: 20px;
+} */
 
 ol{
     margin-left: 5%;
@@ -160,9 +160,17 @@ a:hover {
 
 /* DIV */
 
-.two{
-    display: flex;
-    justify-content: center;
-    gap: 5%;
-    margin: 1%;
+.two {
+  display: flex;
+  width: 100%;
+  margin: 1%;
+}
+
+.two > div {
+  flex: 1; /* Равномерно делит пространство (по 50%) */
+  padding: 1%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* или 'space-evenly', если нужно */
 }
