--- a/styleText.css
+++ b/styleText.css
@@ -43,6 +43,12 @@ p{
 .p{
     font-size: 19px;
 }
+
+.p23{
+    font-size: 23px;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-style: italic;
+}
 .centr{
     text-align: center;
     margin: 0 auto;
