--- a/styleText.css
+++ b/styleText.css
@@ -57,6 +57,15 @@ p{
 .red{
     color: red;
 }
+.blue{
+    color: blue;
+}
+.violet{
+    color: blueviolet;
+}
+div{
+    margin: 1%;
+}
 
 /* AUDIO SŁOWO */
 
@@ -67,3 +76,28 @@ p{
       margin: 1px;
       display: inline-block;
     }
+
+/* TEXT */
+
+.text{
+    border: 3px rgb(3, 92, 3) solid;
+    padding: 1%;
+    width: 84%;
+    margin: 1% auto;
+    
+}
+.text>p{
+    font-size: 19px;
+    margin: 0;
+}
+.text>ul{
+    font-size: 17px;
+    margin-top: -10px;
+}
+
+.bordGreen{
+    border: 2px green solid;
+    padding: 1%;
+    width: 60%;
+    margin: 1% auto;
+}
